
 OpenSSL CHANGES
 _______________

 Changes between 0.9.8e and 0.9.8f-fips  [xx XXX xxxx]

  *) Enhance mkfipsscr.pl to cope with different directory layouts. It now
     relies on the filename and makes no assumptions about the pathname.
     In the case of PSS it scans the file to determine the salt length.
     Paths can be filtered. Also reports duplicate and missing files.
     [Steve Henson]

  *) Updates to WIN32 build system. Make use of AES assembly language routines.
     Use assembly language routines in FIPS compilation.
     [Steve Henson]

  *) Use standard implementations of SHAx, DES, AES under crypto/ in FIPS
     mode to avoid having to maintain two versions. This will also make use
     of appropriate assembly language optimizations.
     [Steve Henson]

  *) Check for selftest status in all crypto operations and exit with a
     fatal error if selftest failed.
     [Steve Henson]

  *) New flag in EVP_CIPHER: EVP_CIPH_FLAG_DEFAULT_ASN1. This will
     automatically use EVP_CIPHER_{get,set}_asn1_iv and avoid the
     need for any ASN1 dependencies in FIPS library. Move AES and 3DES
     cipher definitions to fips library and modify AES and 3DES algorithm
     tests and self tests to use EVP.
     [Steve Henson]

  *) Move EVP cipher code into enc_min.c to support a minimal implementation
     for use by FIPS applications.
     [Steve Henson]

  *) Add algorithm config module. Currently just handles setting FIPS mode.
     [Steve Henson]

  *) Rewrite self tests and pairwise tests to use EVP. Add more extensive
     self tests for RSA in all digests and modes.
     [Steve Henson]

  *) New flags RSA_FIPS_METHOD and DSA_FIPS_METHOD to indicate a method is
     allowed in FIPS mode. Disable direct low level RSA and DSA signature
     operations in FIPS mode so all operations have to be made via EVP.
     [Steve Henson]

  *) New flag EVP_MD_FLAG_SVCTX which passes EVP_MD_CTX and key to underlying